Add tabs and dashboard; remove neotree

--- a/nougat/emacs/neotree.org
+++ b/nougat/emacs/neotree.org
@@ -1,5 +1,5 @@
 NeoTree is a sidebar-mode for emacs that plays with dired and friends.
-* NeoTree
+* COMMENT NeoTree
 #+begin_src emacs-lisp
     (use-package neotree
 ;;      :straight (neotree :type git
@@ -24,7 +24,7 @@ NeoTree is a sidebar-mode for emacs that plays with dired and friends.
 (setq neo-smart-open t)
 #+end_src
 
-** all the icons
+* all the icons
 #+begin_src emacs-lisp
 (use-package all-the-icons
 :config (require 'all-the-icons))
