Add poetry support

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -302,6 +302,28 @@ Override default project directory path.
 (setq blacken-only-if-project-is-blackened t)
 #+end_src
 
+#+RESULTS:
+: t
+
+#+CAPTION: poetry https://github.com/galaunay/poetry.el
+#+begin_src emacs-lisp
+(use-package pyvenv
+ :straight (pyvenv :type git
+               :host github
+               :repo "jorgenschaefer/pyvenv")
+);; :ensure t)
+(use-package transient
+ :straight (transient :type git
+               :host github
+               :repo "magit/transient")
+);; :ensure t)
+(use-package poetry
+:straight (poetry :type git
+                  :host github
+                  :repo "galaunay/poetry.el")
+);;:ensure t)
+#+end_src
+
 #+INCLUDE: "../nougat/support/python/jedi.org"
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
