--- a/emacs-nougat/nougat/emacs/minor-modes.org
+++ b/emacs-nougat/nougat/emacs/minor-modes.org
@@ -9,17 +9,17 @@
     (global-whitespace-mode 1))
 #+END_SRC
 
-** prettify-symbols-mode
+** COMMENT prettify-symbols-mode
 Various symbols will be replaced with nice looking unicode glyphs.
 #+BEGIN_SRC emacs-lisp
-;;  (global-prettify-symbols-mode 1)
+  (global-prettify-symbols-mode 1)
 #+END_SRC
 
 ** electric-pair-mode
 Matching closed brackets are inserted for any typed open bracket.
 #+BEGIN_SRC emacs-lisp
   (electric-pair-mode 1)
-  ;; disable {} auto pairing in electric-pair-mode for web-mode
+;; disable {} auto pairing in electric-pair-mode for web-mode
 (add-hook
  'org-mode-hook
  (lambda ()
