--- a/emacs-nougat/nougat/emacs/ws-butler.org
+++ b/emacs-nougat/nougat/emacs/ws-butler.org
@@ -9,6 +9,9 @@
 
 #+begin_src emacs-lisp
 (require 'ws-butler)
-(add-hook 'prog-mode-hook #'ws-butler-mode)
+;; enable for programming modes
+;;(add-hook 'prog-mode-hook #'ws-butler-mode)
+;; or enable everywhere
+(ws-butler-global-mode)
 #+end_src
 
