--- a/emacs-nougat/nougat/packages/github/gist.org
+++ b/emacs-nougat/nougat/packages/github/gist.org
@@ -1,5 +1,9 @@
 * Gist
 #+CAPTION: Enable gist support
 #+begin_src emacs-lisp
-
+(use-package gist
+ :straight (gist :type git
+               :host github
+               :repo "defunkt/gist.el")
+)
 #+end_src
