--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-hugo.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-hugo.org
@@ -1,4 +1,4 @@
-* Ox-hugo
+* COMMENT Ox-hugo
 [[https://github.com/kaushalmodi/ox-hugo][ox-hugo]] is an exporter for the hugo static site generator.
 #+CAPTION: enable and configure
 #+begin_src emacs-lisp
