--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-rst.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-rst.org
@@ -1,4 +1,4 @@
-* Ox-rst
+* COMMENT Ox-rst
 Restructured text might be nice for writng docstrings, but it's crap for everything
 else!
 #+CAPTION: export org to restructured text
