--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -205,7 +205,8 @@ Auto-revert acts a lot more like modern editors (sublime, etc).  I think.
                         (bookmarks . 5)
                         (projects . 5)
                         (agenda . 5)
-                        (registers . 5)))
+;;                        (registers . 5)
+))
 (setq dashboard-set-heading-icons t)
 (setq dashboard-set-file-icons t)
 (setq dashboard-set-navigator t)
@@ -254,15 +255,15 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-avy.org"
 
 
-##+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
-##+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
-##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 * helm
 #+INCLUDE: "../nougat/packages/helm/setup.org"
 #+INCLUDE: "../nougat/packages/helm/extras/ace-jump-helm-line.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-ag.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-bookmark.org"
-##+INCLUDE: "../nougat/packages/helm/extras/helm-company.org"
+#+INCLUDE: "../nougat/packages/helm/extras/helm-company.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-descbinds.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-flyspell.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-org-rifle.org"
@@ -279,13 +280,13 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/magit/setup.org"
 ** github
 *** gist
-##+INCLUDE: "../nougat/packages/github/gist.org"
+#+INCLUDE: "../nougat/packages/github/gist.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * pandoc mode
 #+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
-** CSV
+** COMMENT CSV
 #+INCLUDE: "../nougat/packages/csv-mode/csv-mode.org"
 ** LaTeX
 #+INCLUDE: "../nougat/support/latex/latex.org"
@@ -348,5 +349,3 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-window.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-yank-pop.org"
 #+INCLUDE: "../nougat/packages/hydra/extras/hydra-zoom.org"
-* misc
-
