--- a/emacs-nougat/nougat/emacs/neotree.org
+++ b/emacs-nougat/nougat/emacs/neotree.org
@@ -1,5 +1,6 @@
-NeoTree is a sidebar-mode for emacs that plays with dired and friends.
 * COMMENT NeoTree
+NeoTree is a sidebar-mode for emacs that plays with dired and friends.
+** NeoTree
 #+begin_src emacs-lisp
     (use-package neotree
 ;;      :straight (neotree :type git
