--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -174,7 +174,7 @@ instead insert the new heading after the end of the current entry.
               (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
 #+end_src
 
-*** ensure no trailing whitespace
+*** COMMENT ensure no trailing whitespace
 #+begin_src emacs-lisp
 ;;  (add-hook 'org-mode-hook
 ;;                  (add-hook 'before-save-hook 'delete-trailing-whitespace))
