--- a/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
@@ -1,7 +1,7 @@
 * org-capture
 ** set default notes file
 #+begin_src emacs-lisp
-  (setq org-default-notes-file (expand-file-name "~/org/notes.org"))
+(setq org-default-notes-file (expand-file-name (concat my/org-path-name "notes.org")))
 #+end_src
 
 ** bind a key for capture
