--- a/README.org
+++ b/README.org
@@ -1,2 +1,4 @@
 # emacs.d
-Behold, i bring you tidings of great joy
+Behold, i bring you tidings of great joy.
+
+You may view a nicely rendered version of my current emacs configuration [[https://gvoysey.github.io/emacs.d/][here]].
