--- a/emacs-nougat/nougat/emacs/autosaves.org
+++ b/emacs-nougat/nougat/emacs/autosaves.org
@@ -17,7 +17,8 @@ edit. This is great if something goes catastrophically wrong to Emacs!
   ,emacs-autosave-directory t)))
 #+END_SRC
 
-** save every 20 secs or 20 keystrokes
+** set save interval
+Here, save every 20 secs or 20 keystrokes.
 #+BEGIN_SRC emacs-lisp
   (setq auto-save-timeout 20
         auto-save-interval 20)
