--- a/emacs-nougat/nougat/emacs/avy.org
+++ b/emacs-nougat/nougat/emacs/avy.org
@@ -1,5 +1,5 @@
-* Avy
-#+CAPTION: avy keybindings
+* avy
+Avy is awesome; set some keybindings.
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-;") 'avy-goto-char)
 (global-set-key (kbd "C-:") 'avy-goto-char-2)
