--- a/emacs-nougat/nougat/emacs/cursor.org
+++ b/emacs-nougat/nougat/emacs/cursor.org
@@ -1,10 +1,12 @@
 * cursor
 ** style
+Cursors have many styles.  I like =bar=.
 #+BEGIN_SRC emacs-lisp
   (setq-default cursor-type 'bar)
 #+END_SRC
 
 ** blinking
+Should the cursor blink?
 #+BEGIN_SRC emacs-lisp
   (blink-cursor-mode 1)
 #+END_SRC
