--- a/emacs-nougat/nougat/emacs/disable.org
+++ b/emacs-nougat/nougat/emacs/disable.org
@@ -1,15 +1,19 @@
 * disable
+Emacs has many, many features -- and some of them should be turned off!
 ** menubar
+The menubar just takes up space.
 #+BEGIN_SRC emacs-lisp
   (menu-bar-mode -1)
 #+END_SRC
 
 ** toolbar
+The toolbar just takes up space.
 #+BEGIN_SRC emacs-lisp
   (tool-bar-mode -1)
 #+END_SRC
 
 ** scrollbar
+The scrollbar just gets in the way.  Minimap or nothing!
 #+BEGIN_SRC emacs-lisp
 ;;disable scroll-bar mode if it's even compiled.  
 (when (display-graphic-p)
@@ -18,6 +22,7 @@
 #+END_SRC
 
 ** startup message
+Squelch startup messages.
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-startup-message t
         initial-scratch-message nil)
