--- a/emacs-nougat/nougat/emacs/editing.org
+++ b/emacs-nougat/nougat/emacs/editing.org
@@ -1,15 +1,24 @@
 ** editing
+Default values for basic editing options live here.
 *** use spaces
 #+BEGIN_SRC emacs-lisp
   (setq-default indent-tabs-mode nil)
 #+END_SRC
 
 *** visual fill-column
+Provided by [[https://github.com/joostkremers/visual-fill-column][visual-fill-column]]:
+#+begin_quote
+visual-fill-column-mode is a small Emacs minor mode that mimics the effect of
+fill-column in visual-line-mode. Instead of wrapping lines at the window edge, which
+is the standard behaviour of visual-line-mode, it wraps lines at fill-column. If
+fill-column is too large for the window, the text is wrapped at the window edge.
+#+end_quote
+
 #+begin_src emacs-lisp
   (use-package visual-fill-column)
 #+end_src
 
-*** fill at 85
+*** fill at 85 characters
 #+BEGIN_SRC emacs-lisp
   (setq-default fill-column 85)
 #+END_SRC
