--- a/emacs-nougat/nougat/emacs/flycheck.org
+++ b/emacs-nougat/nougat/emacs/flycheck.org
@@ -1,7 +1,7 @@
-* Flycheck
+* flycheck
 Flycheck is a modern on-the-fly syntax checking extension for GNU Emacs, intended as
 replacement for the older Flymake extension which is part of GNU Emacs.
-** Flycheck
+** install
 #+begin_src emacs-lisp
 (use-package flycheck
 ;;  :ensure t
