--- a/emacs-nougat/nougat/emacs/neotree.org
+++ b/emacs-nougat/nougat/emacs/neotree.org
@@ -1,6 +1,6 @@
-* COMMENT NeoTree
+* COMMENT neotree
 NeoTree is a sidebar-mode for emacs that plays with dired and friends.
-** NeoTree
+** install and configure
 #+begin_src emacs-lisp
     (use-package neotree
 ;;      :straight (neotree :type git
