--- a/emacs-nougat/nougat/emacs/popwin.org
+++ b/emacs-nougat/nougat/emacs/popwin.org
@@ -1,4 +1,4 @@
-* Popwin
+* popwin
 [[https://github.com/m2ym/popwin-el][popwin]] solves some stupid buffer persistence issues.
 
 #+begin_src emacs-lisp
