--- a/emacs-nougat/nougat/emacs/undo-tree.org
+++ b/emacs-nougat/nougat/emacs/undo-tree.org
@@ -1,4 +1,4 @@
-* Undo-tree
+** undo-tree
 [[http://www.dr-qubit.org/undo-tree.html][undo-tree]] is a way to view emacs undo feature as a tree.
 
 #+begin_quote
@@ -16,12 +16,12 @@ the undo history.
 
 Full documentation can be found [[http://www.dr-qubit.org/undo-tree/undo-tree.txt][here]].
 
-#+CAPTION: Include undo-tree
+
 #+begin_src emacs-lisp
 (use-package undo-tree)
 #+end_src
 
-#+CAPTION: Make undo-tree the default for all modes
+Make undo-tree the default for all modes
 #+begin_src emacs-lisp
 (global-undo-tree-mode)
 #+end_src
