--- a/emacs-nougat/nougat/package-management/straight.org
+++ b/emacs-nougat/nougat/package-management/straight.org
@@ -1,5 +1,6 @@
-* straight.el
-** bootstrap
+
+
+** bootstrap straight
 #+begin_src emacs-lisp
   (let ((bootstrap-file (concat user-emacs-directory "straight/repos/straight.el/bootstrap.el"))
         (bootstrap-version 3))
@@ -13,7 +14,7 @@
     (load bootstrap-file nil 'nomessage))
 #+end_src
 
-** use-package integration
+** configure use-package integration
 #+begin_src emacs-lisp
   (setq straight-use-package-by-default t)
   (straight-use-package 'use-package)
