--- a/emacs-nougat/nougat/packages/github/gist.org
+++ b/emacs-nougat/nougat/packages/github/gist.org
@@ -1,5 +1,6 @@
-* Gist
-#+CAPTION: Enable gist support
+* github
+** gist
+Enable gist support
 #+begin_src emacs-lisp
 (use-package gist
  :straight (gist :type git
