--- a/emacs-nougat/nougat/packages/multiple-cursors/multiple-cursors.org
+++ b/emacs-nougat/nougat/packages/multiple-cursors/multiple-cursors.org
@@ -1,4 +1,4 @@
-* Multiple Cursors
+* install
 [[https://github.com/magnars/multiple-cursors.el][Multiple Cursors]] is an emacs package to provide Sublime Text-like multiple selections.
 
 This section isn't very configured yet.
