--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -19,7 +19,7 @@
           (:tangle . "no")))
 #+end_src
 
-** applescript support
+** COMMENT applescript support
 #+begin_src emacs-lisp
     (use-package ob-applescript
       :after (org)
