--- a/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
@@ -1,18 +1,18 @@
-** LaTeX Export settings
-*** Use smart quotes when appropriate
+** LaTeX export settings
+*** use smart quotes when appropriate
 Newer org-modes support sane quoting
 #+begin_src emacs-lisp
 (setq org-export-with-smart-quotes t)
 #+end_src
 
-*** Set latex as xelatex
+*** set latex as xelatex
 xelatex (or luatex) are usually provided with texlive. They allow, among other things,
 native use of truetype fonts.
 #+begin_src emacs-lisp
 (setq org-latex-compiler "xelatex")
 #+end_src
 
-*** Use minted
+*** use minted for code blocks
 Minted should be usd to dump codeblocks to PDF. This requires pygments and a working
 python installation on the path.
 
