--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-beamer.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-beamer.org
@@ -1,5 +1,5 @@
 * ox-beamer
-#+CAPTION: require beamer export
+add beamer export
 #+begin_src emacs-lisp
 (require 'ox-beamer)
 (setq org-beamer-mode t)
