--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
@@ -1,4 +1,4 @@
-* Ox-Jira
+* ox-jira
 [[https://github.com/stig/ox-jira.el][This module]] plugs into the regular Org Export Engine and transforms Org files to JIRA
 markup for pasting into JIRA tickets & comments.
 #+CAPTION: Enable ox-jira
