--- a/emacs-nougat/nougat/packages/org-mode/extras/toc-org.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/toc-org.org
@@ -1,4 +1,4 @@
-* Toc-org
+* toc-org
 
 [[https://github.com/snosov1/toc-org][toc-org]] helps maintain an up-to-date table of contents in org files without
 exporting (useful primarily for readme files on GitHub).
