--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -1,5 +1,6 @@
 * org-mode
 ** setup
+Getting org to play with straight.el is a little fussy.
 *** fix-org-git-version
 #+begin_src emacs-lisp
   (defun fix-org-git-version ()
@@ -172,10 +173,4 @@ instead insert the new heading after the end of the current entry.
   (add-hook 'org-mode-hook
             (lambda ()
               (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
-#+end_src
-
-*** COMMENT ensure no trailing whitespace
-#+begin_src emacs-lisp
-;;  (add-hook 'org-mode-hook
-;;                  (add-hook 'before-save-hook 'delete-trailing-whitespace))
 #+end_src
