--- a/emacs-nougat/nougat/packages/pandoc-mode/pandoc-mode.org
+++ b/emacs-nougat/nougat/packages/pandoc-mode/pandoc-mode.org
@@ -1,4 +1,4 @@
-* Pandoc mode
+* configure
 [[https://pandoc.org][Pandoc]] is John MacFarlane's project to convert files between markup types.
 
 [[https://joostkremers.github.io/pandoc-mode/][pandoc-mode]] provides an emacs minor mode to access pandoc
