--- a/emacs-nougat/nougat/packages/projectile/discover-projects.org
+++ b/emacs-nougat/nougat/packages/projectile/discover-projects.org
@@ -1,5 +1,5 @@
 * discover projects
-
+Look for project directories here by default.
 ** projectile-project-directory
 #+begin_src emacs-lisp
   (defvar projectile-project-directory (expand-file-name "~/Projects"))
