--- a/emacs-nougat/nougat/packages/yasnippet/yasnippet.org
+++ b/emacs-nougat/nougat/packages/yasnippet/yasnippet.org
@@ -1,13 +1,12 @@
-* YASnippet
-YASnippet extends org-mode '<s'-like templating in an arbitrary way.  This is useful
-for quickly applying export settings, annotating code blocks, and the like.
+* install
 
 This assumes that snippets are stored or symlinked to =${HOME}/.emacs.d/snippets/*=
 #+begin_src emacs-lisp
 (use-package yasnippet)
 (setq yas-snippet-dirs
-      (list (concat (file-name-as-directory user-emacs-directory) (file-name-as-directory "emacs-nougat") "snippets"))
-)
+      (list (concat (file-name-as-directory user-emacs-directory)
+                    (file-name-as-directory "emacs-nougat")
+                    "snippets")))
 
 (yas-global-mode 1) ;; or M-x yas-reload-all if you've started YASnippet already.
 (setq yas-triggers-in-field t) ;; allow nested snippets
