--- a/emacs-nougat/nougat/emacs/dired.org
+++ b/emacs-nougat/nougat/emacs/dired.org
@@ -1,8 +1,7 @@
-* Dired
+* dired
 =dired= is emacs' built in file manager.
 ** dired-sort-dirs
 Dired sorting should lump directories first because I'm used to it.
-#+CAPTION: sort directories first
 #+begin_src emacs-lisp
 (setq dired-listing-switches "-al --group-directories-first")
 #+end_src
