--- a/emacs-nougat/nougat/emacs/fonts.org
+++ b/emacs-nougat/nougat/emacs/fonts.org
@@ -1,4 +1,4 @@
-* Menlo
+* menlo
 Menlo is a wonderful monospace font.  On modern displays, 12-14 point is a
 reasonable size for old eyes.
 #+begin_src emacs-lisp
