--- a/emacs-nougat/nougat/emacs/key-bindings.org
+++ b/emacs-nougat/nougat/emacs/key-bindings.org
@@ -1,4 +1,5 @@
 ** key-bindings
+Set some default keybindings here.
 *** meta n & p
 #+begin_src emacs-lisp
   (global-set-key (kbd "M-p") 'backward-paragraph)
