--- a/emacs-nougat/nougat/emacs/ws-butler.org
+++ b/emacs-nougat/nougat/emacs/ws-butler.org
@@ -1,5 +1,5 @@
-* Whitespace-Butler
-[[https://github.com/lewang/ws-butler][ws-butler]] is an unobtrusive way to trim spaces from the end of lines
+* whitespace-butler
+[[https://github.com/lewang/ws-butler][ws-butler]] is an unobtrusive way to trim spaces from the end of lines, which is great.
 #+begin_src emacs-lisp
 (use-package ws-butler
   :straight (ws-butler :type git
