--- a/emacs-nougat/nougat/packages/ivy/ivy.org
+++ b/emacs-nougat/nougat/packages/ivy/ivy.org
@@ -1,18 +1,5 @@
-* Ivy
-https://github.com/abo-abo/swiper
-#+begin_quote
-flexible, simple tools for minibuffer completion in Emacs
-
-This repository contains:
-
-Ivy, a generic completion mechanism for Emacs.
-
-Counsel, a collection of Ivy-enhanced versions of common Emacs commands.
-
-Swiper, an Ivy-enhanced alternative to isearch.
-#+end_quote
-
-#+CAPTION: Enable
+* install and configure
+Install all packages in the right order
 #+begin_src emacs-lisp
 (use-package ivy
   :straight (ivy :files (:defaults (:exclude "swiper.el" "counsel.el" "ivy-hydra.el") "doc/ivy-help.org")
@@ -31,7 +18,7 @@ use-package ivy-hydra
                        ))
 #+end_src
 
-#+CAPTION: configure
+Configure
 #+begin_src emacs-lisp
 (ivy-mode 1)
 (setq ivy-use-virtual-buffers t)
