Add forge support; relocate where transient is

--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -1,6 +1,28 @@
-* Setup
+* magit
+
 #+BEGIN_SRC emacs-lisp
-  (use-package magit
-    :bind (("C-x g" . magit-status)))
+(use-package magit
+ :straight (magit :type git
+               :host github
+               :repo "magit/magit")
+ :bind(("C-x g" . magit-status)))
 #+END_SRC
 
+* forge
+Forge interfaces with github and gitlab
+#+begin_src emacs-lisp
+(use-package forge
+ :straight (forge :type git
+               :host github
+               :repo "magit/forge")
+)
+#+end_src
+
+* transient
+#+begin_src emacs-lisp
+(use-package transient
+ :straight (transient :type git
+               :host github
+               :repo "magit/transient")
+)
+#+end_src
