--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -8,13 +8,13 @@
  :bind(("C-x g" . magit-status)))
 #+END_SRC
 
-* forge
-Forge interfaces with github and gitlab
+* ghub
+
 #+begin_src emacs-lisp
-(use-package forge
- :straight (forge :type git
+(use-package ghub
+ :straight (ghub :type git
                :host github
-               :repo "magit/forge")
+               :repo "magit/ghub")
 )
 #+end_src
 
@@ -26,3 +26,14 @@ Forge interfaces with github and gitlab
                :repo "magit/transient")
 )
 #+end_src
+
+* forge
+Forge interfaces with github and gitlab
+#+begin_src emacs-lisp
+(use-package forge
+ :straight (forge :type git
+               :host github
+               :repo "magit/forge")
+)
+#+end_src
+
