--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -314,6 +314,22 @@ for quickly applying export settings, annotating code blocks, and the like.
 #+INCLUDE: "../nougat/packages/github/gist.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
+* phi-search
+This is an incremental search which works with multiple cursors and replaces the
+normal bindings.
+
+#+begin_src emacs-lisp
+(use-package phi-search)
+(require 'phi-search)
+(require 'phi-replace)
+#+end_src
+
+#+begin_src emacs-lisp
+(global-set-key (kbd "C-s") 'phi-search)
+(global-set-key (kbd "C-r") 'phi-search-backward)
+(global-set-key (kbd "M-%") 'phi-replace-query)
+#+end_src
+
 * pandoc mode
 #+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
