Update to squelch error messages; comment out forge support for now

--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -8,7 +8,7 @@
  :bind(("C-x g" . magit-status)))
 #+END_SRC
 
-* ghub
+* COMMENT ghub
 
 #+begin_src emacs-lisp
 (use-package ghub
@@ -18,7 +18,7 @@
 )
 #+end_src
 
-* transient
+* COMMENT transient
 #+begin_src emacs-lisp
 (use-package transient
  :straight (transient :type git
@@ -27,7 +27,7 @@
 )
 #+end_src
 
-* forge
+* COMMENT forge
 Forge interfaces with github and gitlab
 #+begin_src emacs-lisp
 (use-package forge
