--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -9,7 +9,7 @@ This is the current version of my emacs configuration.  It is rendered to a
 byte-compiled =init.el= by way of a kludgey bash script.
 
 Commented-out org-mode headings are neither shown here nor present in the tangled
-resulting elisp, but they are present in the repo that houses this document.
+resulting elisp, but they are present in [[https://github.com/gvoysey/emacs.d][the repo]] that houses this document.
 * os-specific configurations
 Some things only need to be tweaked for certain OSes, and happen early -- in this
 case, before the package manager is initialized.
