--- a/emacs-nougat/nougat/packages/org-mode/extras/dynamic-tag-position.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/dynamic-tag-position.org
@@ -15,7 +15,7 @@
               (goto-char (point-min))
               (command-execute 'outline-next-visible-heading)
               ;; disable (message) that org-set-tags generates
-              (flet ((message (&rest ignored) nil))
+              (cl-flet ((message (&rest ignored) nil))
                 (org-set-tags 1 t))
               (set-buffer-modified-p b-m-p))
           (error nil)))))
