--- a/emacs-nougat/nougat/support/direnv/direnv.org
+++ b/emacs-nougat/nougat/support/direnv/direnv.org
@@ -1,4 +1,4 @@
-* Direnv
+* COMMENT Direnv
 [[https://direnv.net/][direnv]] allows directory-specific environment variable overrides.  It's very useful
 for obtuse compilation steps, python tooling, and much else.
 
